force-app/main/default/objects/Volunteer_Job__c/Volunteer_Job__c.object-meta.xml
<CustomObject>
    <label>Governance Campaign</label>
    <nameField>
        <label>Governance Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governance Campaign</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>