force-app/main/default/objects/Volunteer_Job__c/fields/Governance_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Governance_Campaign_Code__c</fullName>
    <externalId>true</externalId>
    <label>Governance Campaign Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>