force-app/main/default/objects/Volunteer_Job__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this Volunteer Job is no longer active, and it won&apos;t be included in the Volunteers Report Hours Sites page.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>