force-app/main/default/objects/Volunteer_Job__c/fields/Recommend_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Type_2__c</fullName>
    <label>Recommend Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Content_Type</valueSetName>
    </valueSet>
</CustomField>