force-app/main/default/objects/Volunteer_Job__c/fields/Title_URL__c.field-meta.xml
<CustomField>
    <fullName>Title_URL__c</fullName>
    <label>Title URL</label>
    <type>Url</type>
</CustomField>