force-app/main/default/objects/Volunteer_Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Governance_Campaign_Code__c</columns>
    <columns>Campaign__c</columns>
    <columns>Number_of_Volunteers_Still_Needed__c</columns>
    <columns>Number_of_Completed_Hours__c</columns>
    <columns>Ongoing__c</columns>
    <columns>Display_on_Website__c</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>