force-app/main/default/objects/Volunteer_Job__c/listViews/Governors_Check.listView-meta.xml
<ListView>
    <fullName>Governors_Check</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Skills_Needed__c</columns>
    <filterScope>Everything</filterScope>
    <label>Governors Check</label>
</ListView>