force-app/main/default/objects/Volunteer_Job__c/listViews/ISU_Foundation_Board_of_Directors.listView-meta.xml
<ListView>
    <fullName>ISU_Foundation_Board_of_Directors</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>ISU Foundation Board of Directors</value>
    </filters>
    <label>ISU Foundation Board of Directors</label>
</ListView>